--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 number_of_images = 100  # total for all websites
+max_workers = 6  # upper limit for threads. Is it needed when using asyncio?
 request_timeout = 2000  # ms
-rotate_by_deg = 180
 to_force_refetch = false  # instructs the script whether to fetch all images straight away or first check if each image was already downloaded and could be taken from FS instead
 input_filename = input.txt
 originals_dirname = img-originals
