add setup commands, read config, init logging

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,19 @@
 [DEFAULT]
-number_of_images = 100  # total for all websites
-max_workers = 6  # upper limit for threads. Is it needed when using asyncio?
-request_timeout = 2000  # ms
-to_force_refetch = false  # instructs the script whether to fetch all images straight away or first check if each image was already downloaded and could be taken from FS instead
+; total for all websites
+number_of_images = 100
+
+; upper limit for threads. Is it needed when using asyncio?
+max_workers = 6
+
+; to be sent as 'User-Agent' request header
+user_agent = sample User-Agent
+
+; ms
+request_timeout = 2000
+
+; instructs the script whether to fetch all images straight away or first check if each image was already downloaded and could be taken from FS instead
+to_force_refetch = false
+
 input_filename = input.txt
 originals_dirname = img-originals
 output_dirname = img-rotated
