process image URLs: filter, resolve, remove fragments, deduplicate

--- a/config.ini
+++ b/config.ini
@@ -2,14 +2,13 @@
 ; total for all websites
 number_of_images = 100
 
-; upper limit for threads. Is it needed when using asyncio?
-max_workers = 6
+; max_connections = 6
 
 ; to be sent as 'User-Agent' request header
 user_agent = sample User-Agent
 
-; ms
-request_timeout = 2000
+; seconds
+request_timeout = 1
 
 ; instructs the script whether to fetch all images straight away or first check if each image was already downloaded and could be taken from FS instead
 to_force_refetch = false
