schedule images downloading in batches

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [DEFAULT]
 ; total for all websites
-number_of_images = 100
+max_img_count = 100
 
 ; max_connections = 6
 
-; to be sent as 'User-Agent' request header
+; sent as 'User-Agent' request header value
 user_agent = sample User-Agent
 
 ; seconds
