--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,7 @@
 [DEFAULT]
 ; total for all websites
-max_img_count = 100
+; max_img_count = 100
+max_img_count = 10
 
 ; max_connections = 6
 
@@ -14,6 +15,6 @@ request_timeout = 1
 to_force_refetch = false
 
 input_filename = input.txt
+log_dirname = log
 originals_dirname = img-originals
 output_dirname = img-rotated
-log_dirname = log
