rotate and store output

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 ; total for all websites
 ; max_img_count = 100
-max_img_count = 10
+max_img_count = 100
 
 ; max_connections = 6
 
@@ -11,10 +11,11 @@ user_agent = sample User-Agent
 ; seconds
 request_timeout = 1
 
-; instructs the script whether to fetch all images straight away or first check if each image was already downloaded and could be taken from FS instead
-to_force_refetch = false
+; instructs the script whether to fetch all images straight away
+; or first check if each image was already downloaded and could be taken from FS instead
+; to_force_refetch = false
 
 input_filename = input.txt
 log_dirname = log
-originals_dirname = img-originals
+download_dirname = img-original
 output_dirname = img-rotated
