cover 'urlutils' with unit tests

--- a/config.ini
+++ b/config.ini
@@ -2,19 +2,16 @@
 ; total for all websites
 max_img_count = 100
 
-; max_connections = 6
-
 ; sent as 'User-Agent' request header value
 user_agent = sample User-Agent
 
 ; seconds
 request_timeout = 2
 
-; instructs the script whether to fetch all images straight away
-; or first check if each image was already downloaded and could be taken from FS instead
-; to_force_refetch = false
-
+; expected to exist
 input_filename = input.txt
+
+; created on the fly
 log_dirname = log
 download_dirname = img-original
 output_dirname = img-rotated
