serialize 'Img' objects to SQLite DB

--- a/config.ini
+++ b/config.ini
@@ -10,6 +10,7 @@ request_timeout = 2
 
 ; expected to exist
 input_filename = input.txt
+db_filepath = db/imgs.db
 
 ; created on the fly
 log_dirname = log
